<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomeLab"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/nome_laboratorio"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latLab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/longLab"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/facLab"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculdade_responsavel"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>